Set env var to create oauth buttons with SSO plugin

--- a/CTFd/config.ini
+++ b/CTFd/config.ini
@@ -359,3 +359,4 @@ OAUTH_CLIENT_SECRET =
 
 [extra]
 # The extra section can be used to specify additional values to be loaded into CTFd's configuration
+OAUTH_CREATE_BUTTONS = True
