Refine compose file for adjustment with env vars

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,64 +1,45 @@
 services:
   ctfd:
     build: .
-    user: root
-    restart: always
+    restart: unless-stopped
     ports:
-      - "8000:8000"
+      - 9220:8000
     environment:
-      - UPLOAD_FOLDER=/var/uploads
-      - DATABASE_URL=mysql+pymysql://ctfd:ctfd@db/ctfd
-      - REDIS_URL=redis://cache:6379
-      - WORKERS=1
-      - LOG_FOLDER=/var/log/CTFd
-      - ACCESS_LOG=-
-      - ERROR_LOG=-
-      - REVERSE_PROXY=true
+      UPLOAD_FOLDER: /var/uploads
+      DATABASE_URL: mysql+pymysql://${DB_USER:-ctfd}:${DB_PASSWORD}@db/${DB_NAME:-ctfd}
+      REDIS_URL: redis://cache:6379
+      WORKERS: 1
+      LOG_FOLDER: /var/log/CTFd
+      ACCESS_LOG: -
+      ERROR_LOG: -
+      REVERSE_PROXY: true
+      TRUSTED_HOSTS: ${TRUSTED_HOSTS}
     volumes:
-      - .data/CTFd/logs:/var/log/CTFd
-      - .data/CTFd/uploads:/var/uploads
-      - .:/opt/CTFd:ro
+      - logs:/var/log/CTFd
+      - uploads:/var/uploads
     depends_on:
       - db
-    networks:
-        default:
-        internal:
-
-  nginx:
-    image: nginx:stable
-    restart: always
-    volumes:
-      - ./conf/nginx/http.conf:/etc/nginx/nginx.conf
-    ports:
-      - 80:80
-    depends_on:
-      - ctfd
 
   db:
-    image: mariadb:10.11
-    restart: always
+    image: mariadb:latest
+    restart: unless-stopped
     environment:
-      - MARIADB_ROOT_PASSWORD=ctfd
-      - MARIADB_USER=ctfd
-      - MARIADB_PASSWORD=ctfd
-      - MARIADB_DATABASE=ctfd
-      - MARIADB_AUTO_UPGRADE=1
+      MARIADB_RANDOM_ROOT_PASSWORD: true
+      MARIADB_USER: ${DB_USER:-ctfd}
+      MARIADB_PASSWORD: ${DB_PASSWORD}
+      MARIADB_DATABASE: ${DB_NAME:-ctfd}
+      MARIADB_AUTO_UPGRADE: 1
     volumes:
-      - .data/mysql:/var/lib/mysql
-    networks:
-        internal:
-    # This command is required to set important mariadb defaults
-    command: [mysqld, --character-set-server=utf8mb4, --collation-server=utf8mb4_unicode_ci, --wait_timeout=28800, --log-warnings=0]
+      - db:/var/lib/mysql
 
   cache:
     image: redis:4
-    restart: always
+    restart: unless-stopped
     volumes:
-    - .data/redis:/data
-    networks:
-        internal:
+    - cache:/data
 
-networks:
-    default:
-    internal:
-        internal: true
+volumes:
+  uploads:
+  logs:
+  db:
+  cache:
