Rollback mariadb version
Due to DB migration errors on first run with v12.1 and above

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - db
 
   db:
-    image: mariadb:latest
+    image: mariadb:lts
     restart: unless-stopped
     environment:
       MARIADB_RANDOM_ROOT_PASSWORD: true
