--- a/CTFd/config.ini
+++ b/CTFd/config.ini
@@ -360,4 +360,4 @@ OAUTH_CLIENT_SECRET =
 [extra]
 # The extra section can be used to specify additional values to be loaded into CTFd's configuration
 OAUTH_CREATE_BUTTONS = True
-OAUTH_ALWAYS_POSSIBLE = True
+OAUTH_SSO_LOGOUT = True
